cmake_minimum_required(VERSION 3.24)
project(CodeWarsCpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall")

find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

add_executable(MyTests test.cpp test.cpp)
add_executable(digitize Fundamental/digitize.cpp)
add_executable(CountDig Fundamental/CountDig.cpp)
add_executable(ShortestWord Fundamental/ShortestWord.cpp)
add_executable(HowMuchILoveYou Fundamental/HowMuchILoveYou.cpp)
add_executable(FindNextSquare Fundamental/FindNextSquare.cpp)
add_executable(ToAlternatingCase Fundamental/ToAlternatingCase.cpp)
add_executable(NthPower Fundamental/NthPower.cpp)
add_executable(Isograms Fundamental/Isograms.cpp)
add_executable(number Fundamental/number.cpp)
add_executable(isPalindrom Fundamental/isPalindrom.cpp)
add_executable(Sum_of_a_sequence Fundamental/Sum_of_a_sequence.cpp)

target_link_libraries(MyTests ${GTEST_BOTH_LIBRARIES})
target_link_libraries(MyTests ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(digitize ${GTEST_BOTH_LIBRARIES})
target_link_libraries(digitize ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(CountDig ${GTEST_BOTH_LIBRARIES})
target_link_libraries(CountDig ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ShortestWord ${GTEST_BOTH_LIBRARIES})
target_link_libraries(ShortestWord ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(HowMuchILoveYou ${GTEST_BOTH_LIBRARIES})
target_link_libraries(HowMuchILoveYou ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(FindNextSquare ${GTEST_BOTH_LIBRARIES})
target_link_libraries(FindNextSquare  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ToAlternatingCase ${GTEST_BOTH_LIBRARIES})
target_link_libraries(ToAlternatingCase  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(NthPower ${GTEST_BOTH_LIBRARIES})
target_link_libraries(NthPower  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Isograms ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Isograms  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(number ${GTEST_BOTH_LIBRARIES})
target_link_libraries(number  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(isPalindrom ${GTEST_BOTH_LIBRARIES})
target_link_libraries(isPalindrom  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Sum_of_a_sequence ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Sum_of_a_sequence ${CMAKE_THREAD_LIBS_INIT})


add_test(Test MyTests)
add_test(DigitizeTest digitize)
add_test(CountDigTest CountDig)
add_test(ShortestWordTest ShortestWord)
add_test(HowMuchILoveYouTest HowMuchILoveYou)
add_test(FindNextSquareTest FindNextSquare)
add_test(ToAlternatingCaseTest ToAlternatingCase)
add_test(NthPowerTest NthPower)
add_test(IsogramsTest Isograms)
add_test(numberTest number)
add_test(isPalindromTest isPalindrom)
add_test(Sum_of_a_sequenceTest Sum_of_a_sequence)


enable_testing()

