cmake_minimum_required(VERSION 3.24)
project(CodeWarsCpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++14 -Wall")

IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
   MESSAGE(STATUS "current platform: Windows")
   set(GTEST_ROOT "D:\\3rd_party\\googletest\\install")
ELSE ()
   MESSAGE(STATUS "current platform: ${CMAKE_SYSTEM_NAME}")
ENDIF ()

find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

add_executable(MyTests test.cpp test.cpp)
add_executable(digitize Fundamental/digitize.cpp)
add_executable(CountDig Fundamental/CountDig.cpp)
add_executable(ShortestWord Fundamental/ShortestWord.cpp)
add_executable(HowMuchILoveYou Fundamental/HowMuchILoveYou.cpp)
add_executable(FindNextSquare Fundamental/FindNextSquare.cpp)
add_executable(ToAlternatingCase Fundamental/ToAlternatingCase.cpp)
add_executable(NthPower Fundamental/NthPower.cpp)
add_executable(Isograms Fundamental/Isograms.cpp)
add_executable(number Fundamental/number.cpp)
add_executable(isPalindrom Fundamental/isPalindrom.cpp)
add_executable(Sum_of_a_sequence Fundamental/Sum_of_a_sequence.cpp)
add_executable(Remove_anchor_from_URL Fundamental/Remove_anchor_from_URL.cpp)
add_executable(Two2One Fundamental/Two2One.cpp)
add_executable(SumTheStrings Fundamental/SumTheStrings.cpp)
add_executable(Count_characters_in_your_string Fundamental/Count_characters_in_your_string.cpp)
add_executable(CalculateBMI "Fundamental/CalculateBMI.cpp")
add_executable(MexicanWave Fundamental/MexicanWave.cpp)
add_executable(Mumbling Fundamental/Mumbling.cpp)
add_executable( Sum_of_the_first_nth_term_of_series "Fundamental/ Sum_of_the_first_nth_term_of_series.cpp")
add_executable(EqualSidesOfAnArray Fundamental/EqualSidesOfAnArray.cpp)
add_executable(HighestScoringWord Fundamental/HighestScoringWord.cpp)
add_executable(AnagramDetection Fundamental/AnagramDetection.cpp)
add_executable(DuplicateEncoder Fundamental/DuplicateEncoder.cpp)
add_executable(ReplaceWithAlphabetPosition Fundamental/ReplaceWithAlphabetPosition.cpp)
add_executable(RangeExtraction RankUP/RangeExtraction.cpp)
add_executable(FindTheOddInt Fundamental/FindTheOddInt.cpp)
add_executable(HelpTheBookSeller "Fundamental/HelpTheBookSeller.cpp")
add_executable(BinaryAddition Fundamental/BinaryAddition.cpp)
add_executable(SimpleEncryption1AlternatingSplit Fundamental/SimpleEncryption1AlternatingSplit.cpp)
add_executable(ReverseWords Fundamental/ReverseWords.cpp)
add_executable(PrimesInNumbers Fundamental/PrimesInNumbers.cpp)
add_executable(AlternateCapitalization Fundamental/AlternateCapitalization.cpp)
add_executable(TortoiseRacing Fundamental/TortoiseRacing.cpp)
add_executable(HowGoodAreYouReally Fundamental/HowGoodAreYouReally.cpp)
add_executable(StringIncrementer Fundamental/StringIncrementer.cpp)
add_executable(CountingDuplicates Fundamental/CountingDuplicates.cpp)
add_executable(SortTheOdd Fundamental/SortTheOdd.cpp)
add_executable(IntegersRecreationOne Fundamental/IntegersRecreationOne.cpp)
add_executable(SumOfIntervals Fundamental/SumOfIntervals.cpp)

target_link_libraries(MyTests ${GTEST_BOTH_LIBRARIES})
target_link_libraries(digitize ${GTEST_BOTH_LIBRARIES})
target_link_libraries(CountDig ${GTEST_BOTH_LIBRARIES})
target_link_libraries(ShortestWord ${GTEST_BOTH_LIBRARIES})
target_link_libraries(HowMuchILoveYou ${GTEST_BOTH_LIBRARIES})
target_link_libraries(FindNextSquare ${GTEST_BOTH_LIBRARIES})
target_link_libraries(ToAlternatingCase ${GTEST_BOTH_LIBRARIES})
target_link_libraries(NthPower ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Isograms ${GTEST_BOTH_LIBRARIES})
target_link_libraries(number ${GTEST_BOTH_LIBRARIES})
target_link_libraries(isPalindrom ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Sum_of_a_sequence ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Remove_anchor_from_URL ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Two2One ${GTEST_BOTH_LIBRARIES})
target_link_libraries(SumTheStrings ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Count_characters_in_your_string ${GTEST_BOTH_LIBRARIES})
target_link_libraries(CalculateBMI ${GTEST_BOTH_LIBRARIES})
target_link_libraries(MexicanWave ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Mumbling ${GTEST_BOTH_LIBRARIES})
target_link_libraries(Sum_of_the_first_nth_term_of_series ${GTEST_BOTH_LIBRARIES})
target_link_libraries(EqualSidesOfAnArray ${GTEST_BOTH_LIBRARIES})
target_link_libraries(HighestScoringWord ${GTEST_BOTH_LIBRARIES})
target_link_libraries(AnagramDetection ${GTEST_BOTH_LIBRARIES})
target_link_libraries(DuplicateEncoder ${GTEST_BOTH_LIBRARIES})
target_link_libraries(ReplaceWithAlphabetPosition ${GTEST_BOTH_LIBRARIES})
target_link_libraries(RangeExtraction ${GTEST_BOTH_LIBRARIES})
target_link_libraries(FindTheOddInt ${GTEST_BOTH_LIBRARIES})
target_link_libraries(HelpTheBookSeller ${GTEST_BOTH_LIBRARIES})
target_link_libraries(BinaryAddition ${GTEST_BOTH_LIBRARIES})
target_link_libraries(SimpleEncryption1AlternatingSplit ${GTEST_BOTH_LIBRARIES})
target_link_libraries(ReverseWords ${GTEST_BOTH_LIBRARIES})
target_link_libraries(PrimesInNumbers ${GTEST_BOTH_LIBRARIES})
target_link_libraries(AlternateCapitalization ${GTEST_BOTH_LIBRARIES})
target_link_libraries(TortoiseRacing ${GTEST_BOTH_LIBRARIES})
target_link_libraries(HowGoodAreYouReally ${GTEST_BOTH_LIBRARIES})
target_link_libraries(StringIncrementer ${GTEST_BOTH_LIBRARIES})
target_link_libraries(CountingDuplicates ${GTEST_BOTH_LIBRARIES})
target_link_libraries(SortTheOdd ${GTEST_BOTH_LIBRARIES})
target_link_libraries(IntegersRecreationOne ${GTEST_BOTH_LIBRARIES})
target_link_libraries(SumOfIntervals ${GTEST_BOTH_LIBRARIES})

target_link_libraries(MyTests ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(digitize ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(CountDig ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ShortestWord ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(HowMuchILoveYou ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(FindNextSquare ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ToAlternatingCase ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(NthPower ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Isograms ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(number ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(isPalindrom ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Sum_of_a_sequence ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Remove_anchor_from_URL ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Two2One ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SumTheStrings ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Count_characters_in_your_string ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(CalculateBMI ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(MexicanWave ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Mumbling ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Sum_of_the_first_nth_term_of_series ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(EqualSidesOfAnArray ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(HighestScoringWord ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(AnagramDetection ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(DuplicateEncoder ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ReplaceWithAlphabetPosition ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(RangeExtraction ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(FindTheOddInt ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(HelpTheBookSeller ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(BinaryAddition ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SimpleEncryption1AlternatingSplit ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ReverseWords ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(PrimesInNumbers ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(AlternateCapitalization ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(TortoiseRacing ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(HowGoodAreYouReally ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(StringIncrementer ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(CountingDuplicates ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SortTheOdd ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(IntegersRecreationOne ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SumOfIntervals ${CMAKE_THREAD_LIBS_INIT})

add_test(Test MyTests)
add_test(DigitizeTest digitize)
add_test(CountDigTest CountDig)
add_test(ShortestWordTest ShortestWord)
add_test(HowMuchILoveYouTest HowMuchILoveYou)
add_test(FindNextSquareTest FindNextSquare)
add_test(ToAlternatingCaseTest ToAlternatingCase)
add_test(NthPowerTest NthPower)
add_test(IsogramsTest Isograms)
add_test(numberTest number)
add_test(isPalindromTest isPalindrom)
add_test(Sum_of_a_sequenceTest Sum_of_a_sequence)
add_test(Remove_anchor_from_URLTest Remove_anchor_from_URL)
add_test(Two2OneTest Two2One)
add_test(SumTheStringsTest SumTheStrings)
add_test(Count_characters_in_your_stringTest Count_characters_in_your_string)
add_test(CalculateBMITest CalculateBMI)
add_test(MexicanWaveTest MexicanWave)
add_test(MumblingTest Mumbling)
add_test(Sum_of_the_first_nth_term_of_seriesTest Sum_of_the_first_nth_term_of_series)
add_test(EqualSidesOfAnArrayTest EqualSidesOfAnArray)
add_test(HighestScoringWordTest HighestScoringWord)
add_test(AnagramDetectionTest AnagramDetection)
add_test(DuplicateEncoderTest DuplicateEncoder)
add_test(ReplaceWithAlphabetPositionTest ReplaceWithAlphabetPosition)
add_test(RangeExtractionTest RangeExtraction)
add_test(FindTheOddIntTest FindTheOddInt)
add_test(HelpTheBookSellerTest HelpTheBookSeller)
add_test(BinaryAdditionTest BinaryAddition)
add_test(SimpleEncryption1AlternatingSplitTest SimpleEncryption1AlternatingSplit)
add_test(ReverseWordsTest ReverseWords)
add_test(PrimesInNumbersTest PrimesInNumbers)
add_test(AlternateCapitalizationTest AlternateCapitalization)
add_test(TortoiseRacingTest TortoiseRacing)
add_test(HowGoodAreYouReallyTest HowGoodAreYouReally)
add_test(StringIncrementerTest StringIncrementer)
add_test(CountingDuplicatesTest CountingDuplicates)
add_test(SortTheOddTest SortTheOdd)
add_test(IntegersRecreationOneTest IntegersRecreationOne)
add_test(SumOfIntervalsTest SumOfIntervals)

enable_testing()